Fix dark mode

--- a/client/src/app/site/modules/global-headbar/components/global-search/global-search.component.scss
+++ b/client/src/app/site/modules/global-headbar/components/global-search/global-search.component.scss
@@ -51,6 +51,7 @@
         }
 
         ::ng-deep mark {
+            color: inherit;
             background: none;
             font-weight: 400;
         }
@@ -76,10 +77,6 @@
                 padding: 0 4px;
             }
         }
-    }
-
-    .search-results-entry:nth-of-type(2n + 1) {
-        background-color: #eee;
     }
 }
 
